Changed the Charts

--- a/currency_analysis.ipynb
+++ b/currency_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
      "output_type": "stream",
      "text": [
       "All libraries loaded successfully\n",
-      "Analysis started: 2025-11-26 17:50:12\n"
+      "Analysis started: 2025-11-26 18:31:39\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1721,15 +1721,15 @@
     "print(\"IMMEDIATE ACTIONS (Next 48 Hours)\")\n",
     "print(\"=\" * 80)\n",
     "\n",
-    "print(\"\\n🔴 CRITICAL:\")\n",
+    "print(\"\\n CRITICAL:\")\n",
     "print(\"   1. Initiate EUR long positions (oversold + mean reversion)\")\n",
     "print(\"   2. Deploy volatility hedges on EUR/GBP (options/collars)\")\n",
     "\n",
-    "print(\"\\n🟡 IMPORTANT:\")\n",
+    "print(\"\\n IMPORTANT:\")\n",
     "print(\"   3. Review EUR-GBP correlation exposure (reduce redundancy)\")\n",
     "print(\"   4. Implement daily monitoring until volatility normalizes\")\n",
     "\n",
-    "print(\"\\n🟢 RECOMMENDED:\")\n",
+    "print(\"\\n RECOMMENDED:\")\n",
     "print(\"   5. Maintain CAD allocation (portfolio stabilizer)\")\n",
     "\n",
     "# ============================================================================\n",
